# tappy-plane

./: package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
game/: .gitignore  Cargo.toml  modulize.js
game/pkg/: game.d.ts  game.js  game_bg.wasm  game_bg.wasm.d.ts  package.json
game/src/: browser.rs  engine.rs  game.rs  lib.rs  physics.rs  utils.rs
src/: app.postcss
src/routes/: +layout.svelte  +page.svelte
static/assets/: sheet.json
static/assets/Spritesheet/: planes.json  sheet.json
