[package]
name = "game"
version = "0.1.0"
edition = "2021"
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.75"
js-sys = "0.3.55"
futures = "0.3.29"
async-trait = "0.1.74"
wasm-bindgen = "0.2.88"
serde-wasm-bindgen = "0.6.1"
wasm-bindgen-futures = "0.4.38"
console_error_panic_hook = "0.1.7"
serde = { version="1.0.192", features = ["derive"] }
rapier2d = { version = "0.17.2", features = ["wasm-bindgen"] }


[dependencies.web-sys]
version = "0.3.65"
features = [
	"CanvasRenderingContext2d", 
	"console", 
	"Document", 
	"Element", 
	"EventTarget",
	"HtmlCanvasElement", 
	"HtmlImageElement", 
	"MouseEvent",
	"Performance",
	"Response", 
	"Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

